CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(WetaHair)

SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED  ON)
SET(Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE(Boost 1.51 EXACT REQUIRED COMPONENTS math_tr1l)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIR})

OPTION(USE_ARNOLD   OFF)
OPTION(USE_3DELIGHT OFF)

ADD_SUBDIRECTORY(WetaHair)
