FIND_PATH(ARNOLD_DIR REQUIRED)
SET(ARNOLD_INCLUDE_DIR "${ARNOLD_DIR}/include")
SET(ARNOLD_LIBRARY_DIR "${ARNOLD_DIR}/lib")

INCLUDE_DIRECTORIES(${ARNOLD_INCLUDE_DIR})
LINK_DIRECTORIES(${ARNOLD_LIBRARY_DIR})

ADD_LIBRARY(WetaHairShader SHARED WetaHairShader.cpp)
TARGET_LINK_LIBRARIES(WetaHairShader ai)
